# backend/src/resources.rs
@@ -68,6 +68,7 @@ pub struct Resource {
     pub resource_type: String,
     pub extra_perms: serde_json::Value,
     pub account: Option<i32>,
+    pub is_oauth: bool,
 }
 
 #[derive(Deserialize)]
@@ -76,6 +77,8 @@ pub struct CreateResource {
     pub value: Option<serde_json::Value>,
     pub description: Option<String>,
     pub resource_type: String,
+    pub account: Option<i32>,
+    pub is_oauth: Option<bool>,
 }
 #[derive(Deserialize)]
 struct EditResource {
@@ -106,6 +109,7 @@ async fn list_resources(
             "resource_type",
             "extra_perms",
             "account",
+            "is_oauth",
         ])
         .order_by("path", true)
         .and_where("workspace_id = ? OR workspace_id = 'starter'".bind(&w_id))
@@ -180,13 +184,15 @@ async fn create_resource(
 
     sqlx::query!(
         "INSERT INTO resource
-            (workspace_id, path, value, description, resource_type)
-            VALUES ($1, $2, $3, $4, $5)",
+            (workspace_id, path, value, description, resource_type, account, is_oauth)
+            VALUES ($1, $2, $3, $4, $5, $6, $7)",
         w_id,
         resource.path,
         resource.value,
         resource.description,
         resource.resource_type,
+        resource.account,
+        resource.is_oauth
     )
     .execute(&mut tx)
     .await?;
